Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9733

Server crashes in lf_pinbox_real_free on replication slaves

Details

    • 10.1.13

    Description

      A user saw the following crashes on replication slaves while running SELECT queries. They had parallel replication enabled.

      (gdb) bt
      #0 0x0000555555fd2c84 in recursive_iterate (array=0x5555567f3a08 <mdl_locks+40>, ptr=0x7fdc3148e080, level=0, func=0x555555fd24c0 <harvest_pins>, arg=0x7fd90d735af0) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:172
      #1 0x0000555555fd36fb in recursive_iterate (arg=0x7fd90d735af0, func=0x555555fd24c0 <harvest_pins>, level=1, ptr=0x7fdc3146d808, array=0x5555567f3a08 <mdl_locks+40>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:179
      #2 lf_dynarray_iterate (array=array@entry=0x5555567f3a08 <mdl_locks+40>, func=func@entry=0x555555fd24c0 <harvest_pins>, arg=arg@entry=0x7fd90d735af0) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:201
      #3 0x0000555555fd2826 in lf_pinbox_real_free (pins=pins@entry=0x7fd9f7ae0e00) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:355
      #4 0x0000555555fd2a37 in lf_pinbox_put_pins (pins=0x7fd9f7ae0e00) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:232
      #5 0x00005555559543ce in THD::~THD (this=0x7fd923648008, __in_chrg=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_class.cc:1657
      #6 0x00005555559548b1 in THD::~THD (this=0x7fd923648008, __in_chrg=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_class.cc:1707
      #7 0x00005555558e94e7 in unlink_thd (thd=0x7fd923648008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mysqld.cc:2912
      #8 0x00005555558e9540 in one_thread_per_connection_end (thd=<optimized out>, put_in_cache=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mysqld.cc:3025
      #9 0x0000555555a4b7e3 in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fd923648008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1369
      #10 0x0000555555a4ba30 in handle_one_connection (arg=0x7fd923648008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #11 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #12 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      (gdb) bt
      #0 0x0000555555fd2c9b in recursive_iterate (array=0x5555567f3a08 <mdl_locks+40>, ptr=0x7fdc244b6080, level=0, func=0x555555fd24c0 <harvest_pins>, arg=0x7fd9083fe950) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:172
      #1 0x0000555555fd36fb in recursive_iterate (arg=0x7fd9083fe950, func=0x555555fd24c0 <harvest_pins>, level=1, ptr=0x7fdc244f6808, array=0x5555567f3a08 <mdl_locks+40>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:179
      #2 lf_dynarray_iterate (array=array@entry=0x5555567f3a08 <mdl_locks+40>, func=func@entry=0x555555fd24c0 <harvest_pins>, arg=arg@entry=0x7fd9083fe950) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_dynarray.c:201
      #3 0x0000555555fd2826 in lf_pinbox_real_free (pins=0x7fd93ac2fd80) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:355
      #4 0x0000555555fd2ae6 in lf_pinbox_free (pins=pins@entry=0x7fd93ac2fd80, addr=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:271
      #5 0x0000555555fd40c9 in ldelete (pins=0x7fd93ac2fd80, keylen=30, key=0x7fda6ecfc3b0 "\002production", hashnr=3129183231, cs=0x5555567845e0 <my_charset_bin>, head=0x7ffff3873678) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:245
      #6 lf_hash_delete (hash=0x5555567f39e0 <mdl_locks>, pins=0x7fd93ac2fd80, key=0x7fda6ecfc3b0, keylen=30) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:453
      #7 0x0000555555a53fd5 in MDL_lock::remove_ticket (this=0x7fda6ecfc3a8, pins=0x7fd93ac2fd80, list=list@entry=&MDL_lock::m_granted, ticket=ticket@entry=0x7fdc9d9c82c0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1628
      #8 0x0000555555a54fe4 in MDL_context::release_lock (this=<optimized out>, duration=<optimized out>, ticket=0x7fdc9d9c82c0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2534
      #9 0x0000555555a55065 in MDL_context::release_locks_stored_before (this=this@entry=0x7fd908dee100, duration=duration@entry=MDL_TRANSACTION, sentinel=sentinel@entry=0x0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2584
      #10 0x0000555555a554aa in MDL_context::release_transactional_locks (this=this@entry=0x7fd908dee100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2753
      #11 0x000055555597d3f3 in mysql_execute_command (thd=thd@entry=0x7fd908dee008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:5748
      #12 0x0000555555985f1e in mysql_parse (thd=0x7fd908dee008, rawbuf=<optimized out>, length=<optimized out>, parser_state=0x7fd908400100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:7265
      #13 0x00005555559893cb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fd908dee008, packet=packet@entry=0x7fd908df4009 "", packet_length=packet_length@entry=54) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1488
      #14 0x0000555555989c49 in do_command (thd=0x7fd908dee008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1110
      #15 0x0000555555a4b85a in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fd908dee008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1350
      #16 0x0000555555a4ba30 in handle_one_connection (arg=0x7fd908dee008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #17 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #18 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      (gdb) bt
      #0 lf_pinbox_real_free (pins=0x7fdab3a3ad80) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:355
      #1 0x0000555555fd2ae6 in lf_pinbox_free (pins=pins@entry=0x7fdab3a3ad80, addr=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:271
      #2 0x0000555555fd40c9 in ldelete (pins=0x7fdab3a3ad80, keylen=20, key=0x7fda3815a3b0 "\002pipeline", hashnr=3824515445, cs=0x5555567845e0 <my_charset_bin>, head=0x7ffff3873648) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:245
      #3 lf_hash_delete (hash=0x5555567f39e0 <mdl_locks>, pins=0x7fdab3a3ad80, key=0x7fda3815a3b0, keylen=20) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:453
      #4 0x0000555555a53fd5 in MDL_lock::remove_ticket (this=0x7fda3815a3a8, pins=0x7fdab3a3ad80, list=list@entry=&MDL_lock::m_granted, ticket=ticket@entry=0x7fdc3f9014c0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1628
      #5 0x0000555555a54fe4 in MDL_context::release_lock (this=<optimized out>, duration=<optimized out>, ticket=0x7fdc3f9014c0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2534
      #6 0x0000555555a55065 in MDL_context::release_locks_stored_before (this=this@entry=0x7fd99cb37100, duration=duration@entry=MDL_TRANSACTION, sentinel=sentinel@entry=0x0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2584
      #7 0x0000555555a554aa in MDL_context::release_transactional_locks (this=this@entry=0x7fd99cb37100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2753
      #8 0x000055555597d3f3 in mysql_execute_command (thd=thd@entry=0x7fd99cb37008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:5748
      #9 0x0000555555985f1e in mysql_parse (thd=0x7fd99cb37008, rawbuf=<optimized out>, length=<optimized out>, parser_state=0x7fd99c325100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:7265
      #10 0x00005555559893cb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fd99cb37008, packet=packet@entry=0x7fd99cb3d009 "", packet_length=packet_length@entry=53) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1488
      #11 0x0000555555989c49 in do_command (thd=0x7fd99cb37008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1110
      #12 0x0000555555a4b85a in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fd99cb21008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1350
      #13 0x0000555555a4ba30 in handle_one_connection (arg=0x7fd99cb21008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #14 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #15 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      (gdb) bt
      #0 0x00007ffff5d28dd6 in msort_with_tmp.part.0 () from /lib64/libc.so.6
      #1 0x00007ffff5d28e28 in msort_with_tmp.part.0 () from /lib64/libc.so.6
      #2 0x00007ffff5d2936c in qsort_r () from /lib64/libc.so.6
      #3 0x0000555555fd2862 in lf_pinbox_real_free (pins=0x7fd97175ce80) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:361
      #4 0x0000555555fd2ae6 in lf_pinbox_free (pins=pins@entry=0x7fd97175ce80, addr=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:271
      #5 0x0000555555fd40c9 in ldelete (pins=0x7fd97175ce80, keylen=24, key=0x7fda27f5d430 "\002production", hashnr=4077661875, cs=0x5555567845e0 <my_charset_bin>, head=0x7ffff387b888) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:245
      #6 lf_hash_delete (hash=0x5555567f39e0 <mdl_locks>, pins=0x7fd97175ce80, key=0x7fda27f5d430, keylen=24) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:453
      #7 0x0000555555a53fd5 in MDL_lock::remove_ticket (this=0x7fda27f5d428, pins=0x7fd97175ce80, list=list@entry=&MDL_lock::m_granted, ticket=ticket@entry=0x7fdc7637d940) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1628
      #8 0x0000555555a54fe4 in MDL_context::release_lock (this=<optimized out>, duration=<optimized out>, ticket=0x7fdc7637d940) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2534
      #9 0x0000555555a55065 in MDL_context::release_locks_stored_before (this=this@entry=0x7fda734e0100, duration=duration@entry=MDL_TRANSACTION, sentinel=sentinel@entry=0x0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2584
      #10 0x0000555555a554aa in MDL_context::release_transactional_locks (this=this@entry=0x7fda734e0100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2753
      #11 0x000055555597d3f3 in mysql_execute_command (thd=thd@entry=0x7fda734e0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:5748
      #12 0x0000555555985f1e in mysql_parse (thd=0x7fda734e0008, rawbuf=<optimized out>, length=<optimized out>, parser_state=0x7fd90d3b5100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:7265
      #13 0x00005555559893cb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fda734e0008, packet=packet@entry=0x7fda96817009 "", packet_length=packet_length@entry=78) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1488
      #14 0x0000555555989c49 in do_command (thd=0x7fda734e0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1110
      #15 0x0000555555a4b85a in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fda734e0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1350
      #16 0x0000555555a4ba30 in handle_one_connection (arg=0x7fda734e0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #17 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #18 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      (gdb) bt
      #0 0x00007ffff5d28dd6 in msort_with_tmp.part.0 () from /lib64/libc.so.6
      #1 0x00007ffff5d28e28 in msort_with_tmp.part.0 () from /lib64/libc.so.6
      #2 0x00007ffff5d2936c in qsort_r () from /lib64/libc.so.6
      #3 0x0000555555fd2862 in lf_pinbox_real_free (pins=0x7fd3c3cd1600) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:361
      #4 0x0000555555fd2ae6 in lf_pinbox_free (pins=pins@entry=0x7fd3c3cd1600, addr=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:271
      #5 0x0000555555fd40c9 in ldelete (pins=0x7fd3c3cd1600, keylen=24, key=0x7fd09f089730 "\002production", hashnr=4077661875, cs=0x5555567845e0 <my_charset_bin>, head=0x7ffff3873888) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:245
      #6 lf_hash_delete (hash=0x5555567f39e0 <mdl_locks>, pins=0x7fd3c3cd1600, key=0x7fd09f089730, keylen=24) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:453
      #7 0x0000555555a53fd5 in MDL_lock::remove_ticket (this=0x7fd09f089728, pins=0x7fd3c3cd1600, list=list@entry=&MDL_lock::m_granted, ticket=ticket@entry=0x7fce6f3da280) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1628
      #8 0x0000555555a54fe4 in MDL_context::release_lock (this=<optimized out>, duration=<optimized out>, ticket=0x7fce6f3da280) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2534
      #9 0x0000555555a55065 in MDL_context::release_locks_stored_before (this=this@entry=0x7fc9f1e9b100, duration=duration@entry=MDL_TRANSACTION, sentinel=sentinel@entry=0x0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2584
      #10 0x0000555555a554aa in MDL_context::release_transactional_locks (this=this@entry=0x7fc9f1e9b100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:2753
      #11 0x000055555597d3f3 in mysql_execute_command (thd=thd@entry=0x7fc9f1e9b008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:5748
      #12 0x0000555555985f1e in mysql_parse (thd=0x7fc9f1e9b008, rawbuf=<optimized out>, length=<optimized out>, parser_state=0x7fce3756f100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:7265
      #13 0x00005555559893cb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fc9f1e9b008,
      packet=packet@entry=0x7fc9e5cba009 "nfig\", \"value\": \"MIC\", \"key\": \"cancelAlphaMode\"}, \"sizingAlphaSd\": {\"configType\": \"exeConfig\", \"value\": \"0.36\", \"key\": \"sizingAlphaSd\"}, \"mtInvert\": {\"configType\": \"exeConfig\", \"value\": \"0\", \"key\": \"m"...,
      packet_length=packet_length@entry=49) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1488
      #14 0x0000555555989c49 in do_command (thd=0x7fc9f1e9b008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1110
      #15 0x0000555555a4b85a in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fc9e5fd0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1350
      #16 0x0000555555a4ba30 in handle_one_connection (arg=0x7fc9e5fd0008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #17 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #18 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      (gdb) bt
      #0 lf_pinbox_real_free (pins=0x7fd9d26f8e00) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:355
      #1 0x0000555555fd2ae6 in lf_pinbox_free (pins=pins@entry=0x7fd9d26f8e00, addr=addr@entry=0x7fd9dc748f88) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_alloc-pin.c:271
      #2 0x0000555555fd3e4b in lf_hash_insert (hash=<optimized out>, pins=0x7fd9d26f8e00, data=<optimized out>) at /home/buildbot/buildbot/build/mariadb-10.1.8/mysys/lf_hash.c:417
      #3 0x0000555555a5283e in MDL_map::find_or_insert (this=this@entry=0x5555567f39e0 <mdl_locks>, pins=0x7fd9d26f8e00, mdl_key=mdl_key@entry=0x7fda3f914680) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:749
      #4 0x0000555555a54362 in MDL_context::try_acquire_lock_impl (this=this@entry=0x7fd960f02100, mdl_request=mdl_request@entry=0x7fda3f914660, out_ticket=out_ticket@entry=0x7fd9b3245c60) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1887
      #5 0x0000555555a548ee in MDL_context::acquire_lock (this=this@entry=0x7fd960f02100, mdl_request=mdl_request@entry=0x7fda3f914660, lock_wait_timeout=3600) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/mdl.cc:1990
      #6 0x0000555555939b0d in open_table_get_mdl_lock (mdl_ticket=<synthetic pointer>, flags=0, mdl_request=0x7fda3f914660, ot_ctx=0x7fd9b32463e0, thd=0x7fd960f02008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.cc:2118
      #7 open_table (thd=thd@entry=0x7fd960f02008, table_list=table_list@entry=0x7fda3f914248, ot_ctx=ot_ctx@entry=0x7fd9b32463e0) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.cc:2380
      #8 0x000055555593e130 in open_and_process_table (ot_ctx=0x7fd9b32463e0, has_prelocking_list=false, prelocking_strategy=0x7fd9b3246690, flags=0, counter=0x7fd9b3246630, tables=0x7fda3f914248, lex=0x7fd960f05808, thd=0x7fd960f02008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.cc:4068
      #9 open_tables (thd=thd@entry=0x7fd960f02008, options=..., start=start@entry=0x7fd9b3246628, counter=counter@entry=0x7fd9b3246630, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x7fd9b3246690) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.cc:4579
      #10 0x000055555593e494 in open_and_lock_tables (thd=thd@entry=0x7fd960f02008, options=..., tables=tables@entry=0x7fda3f914248, derived=derived@entry=true, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x7fd9b3246690) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.cc:5241
      #11 0x0000555555976ced in open_and_lock_tables (flags=0, derived=true, tables=0x7fda3f914248, thd=0x7fd960f02008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_base.h:530
      #12 execute_sqlcom_select (thd=thd@entry=0x7fd960f02008, all_tables=0x7fda3f914248) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:5788
      #13 0x0000555555982821 in mysql_execute_command (thd=thd@entry=0x7fd960f02008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:2962
      #14 0x0000555555985f1e in mysql_parse (thd=0x7fd960f02008, rawbuf=<optimized out>, length=<optimized out>, parser_state=0x7fd9b3248100) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:7265
      #15 0x00005555559893cb in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fd960f02008, packet=packet@entry=0x7fd960f08009 "SELECT * FROM liveHistory WHERE liveId IN (34041)", packet_length=packet_length@entry=49) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1488
      #16 0x0000555555989c49 in do_command (thd=0x7fd960f02008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_parse.cc:1110
      #17 0x0000555555a4b85a in do_handle_one_connection (thd_arg=thd_arg@entry=0x7fd9b3f2a008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1350
      #18 0x0000555555a4ba30 in handle_one_connection (arg=0x7fd9b3f2a008) at /home/buildbot/buildbot/build/mariadb-10.1.8/sql/sql_connect.cc:1262
      #19 0x00007ffff7bc6df5 in start_thread () from /lib64/libpthread.so.0
      #20 0x00007ffff5de71ad in clone () from /lib64/libc.so.6
      

      Attachments

        Issue Links

          Activity

            elenst Elena Stepanova added a comment - - edited

            serg, apparently it's something you had an idea about.

            elenst Elena Stepanova added a comment - - edited serg , apparently it's something you had an idea about.

            People

              serg Sergei Golubchik
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.