MDEV-9733 Server crashes in lf_pinbox_real_free on replication slaves

don't allocate all the stack, leave some stack for
function calls.

To test I added the following line:
  alloca_size = available_stack_size() - X
at X=4096 or less mysqld crashed, at 8192 mtr test passed.